# rtl-fixer

./: .gitignore  README.md  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  tsconfig.web.json  unicode-bidi-examples.html  vitest.config.ts
.cursor/rules/: git-push-release.mdc
.github/workflows/: build.yml
apps/cli/: package.json
apps/cli/src/: index.ts
apps/electron/: eslint.config.js  package.json  tsconfig.node.json
apps/electron/src/main/: index.ts
apps/electron/src/renderer/: index.html
apps/electron/tests/: bidi.test.ts  markdown.test.ts
apps/obsidian/: main.js  main.ts  manifest.json  package.json  styles.css
apps/pwa/: package.json
apps/pwa/src/: App.tsx
apps/tauri/: package.json  vite.config.ts
apps/tauri/src/: App.tsx  main.tsx
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/tauri/src/components/: Footer.tsx  Header.tsx  InputPanel.tsx  MdPreview.tsx  OutputPanel.tsx  ViewSwitcher.tsx
apps/vscode-ext/: package.json
apps/vscode-ext/src/: extension.ts
cli/: index.ts  tsconfig.json
obsidian-plugin/: main.ts  manifest.json  package.json
pwa/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pwa/src/: App.tsx
pwa/src/lib/: bidi.ts  store.ts
renderer/: index.html  renderer.js  styles.css
src/preload/: index.d.ts  index.ts
tests/: bidi.test.ts
vscode-ext/: package.json
vscode-ext/src/: extension.ts
(+15 files in other folders)
